:lipstick: Fix search actions alignment

--- a/src/components/Search/Search.module.css
+++ b/src/components/Search/Search.module.css
@@ -1,10 +1,11 @@
 .search {
   @apply flex
-    w-full;
+    flex-1;
 }
 
 .input {
-  @apply bg-gray-100
+  @apply flex-1
+    bg-gray-100
     rounded-lg
     text-gray-500
     px-2
